# SGLDM

./: CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/: constants.env
.github/actions/setup_cache/: action.yml
.github/workflows/: ci.yml  codeql-analysis.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/SGLDM/: Core.hpp  Log.hpp  calbekcs.hpp  glm_matld.hpp  glm_prety_string_cast.hpp  headers.hpp  sample_library.hpp
include/SGLDM/glad/: glad.h
include/SGLDM/timer/: TimeStep.hpp  Timer.hpp  Times.hpp
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  Core.cpp  stb_image.cpp
src/Glad/: CMakeLists.txt  glad.c
src/engine/: CMakeLists.txt  Camera.cpp  Camera.hpp  EBO.cpp  EBO.hpp  OpenGLContext.cpp  OpenGLContext.hpp  ShaderClass.cpp  ShaderClass.hpp  Texture.cpp  Texture.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  default.frag  default.vert  main.cpp  openglCalback.hpp
src/engine/res/: default.frag  default.vert
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
